CMF 1.5.2beta (unreleased)

  New Features

    - Interfaces: Added newstyle (Zope 3) interfaces.
      This change has no effect on Zope 2.7 without Five.

    - CMFSetup.skins: Small featurelet that adds a new keyword to the
      "layer" tag in skins.xml named "remove". If "remove" is
      specified, the named layer will be explicitly removed from the 
      skins path(s).

  Other
  
    - CMFCore.TypesTool.TypeInformation.queryMethodID(): Add new argument
      context=None and change all calls of queryMethodID to apply the context.

    - CMFTopic.Topic/CMFCore.PortalContent: Clean up a previous change
      by changing __call__ methods to be aligned with what's on CVS
      HEAD and using the old _getViewFor function as a fallback to
      retain backwards compatibility.

    - DCWorkflow: Add a note to the Transitions and States forms
      explaining that the renaming actions will not automatically
      update any items in the workflow that might be affected by
      the change. (http://www.zope.org/Collectors/CMF/89)

    - CMFCatalogAware: reindexObjectSecurity() now supports an
      optional argument 'skip_self' that prevents the object itself
      from being reindexed, but its descendants still are. Allows an
      optimization when you want to reindex all the idxs *and* the
      security in a single shot with reindexObject().

    - CMFCatalogAware: allow easy subclassing of the "security indexes"
      that are reindexed by reindexObjectSecurity(), through the
      attribute _cmf_security_indexes.

    - doActionFor() propagates **kw to isActionSupported() through
      _checkTransitionGuard() until the guard.check() method so that
      StateChangeInfo() can be constructed with those kwargs.

  Bugs Fixed

    - CMFDefault.SyndicationTool: Zope 2.8 raises AttributeError where
      earlier Zopes used to raise KeyError.

    - Set cache headers in 304 responses from FSImage / FSFile
      (http://zope.org/Collectors/355)
